Fixed styling in landscape mode on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ html, body {
 
 header {
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
-    height: 10vh;
+    min-height: 10vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,7 +30,7 @@ main {
 
 #container {
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -91,9 +91,8 @@ main {
     box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.096);
 }
 
-.animateDisplay {
-    font-size: 42px;
-    transition: font-size 0.3s; 
+.gameSquare p {
+    font-size: 100px;
 }
 
 select {
@@ -189,6 +188,35 @@ img {
     background-color: rgb(45, 145, 45);
 }
 
+.scale-up-center {
+    -webkit-animation: scale-up-center 0.4s cubic-bezier(0.680, -0.550, 0.265, 1.550) reverse both;
+    animation: scale-up-center 0.4s cubic-bezier(0.680, -0.550, 0.265, 1.550) reverse both;
+}
+
+@-webkit-keyframes scale-up-center {
+    0% {
+        -webkit-transform: scale(0.5);
+        transform: scale(0.5);
+    }
+
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+}
+
+@keyframes scale-up-center {
+    0% {
+        -webkit-transform: scale(0.5);
+        transform: scale(0.5);
+    }
+
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+}
+
 @media screen and (min-width: 320px) {
     #gameBoard {
         width: 350px;
@@ -200,7 +228,17 @@ img {
     }
 }
 
+@media screen and (max-height: 723px) {
+    html, body {
+        overflow: visible;
+    }
+}
+
 @media screen and (max-height: 573px) {
+    html, body {
+        overflow: visible;
+    }
+
     #players_interface {
         height: 150px;
         left: 50%;
@@ -208,5 +246,15 @@ img {
         margin-left: -47.5%;
         margin-top: -95px;
         flex-direction: row;
+    }
+
+    #gameBoard {
+        width: 40%;
+        height: 40%;
+    }
+
+    .gameSquare {
+        width: 75px;
+        height: 75px;
     }
 }
